# smmac

./: docker-compose.yml
force/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  emails.txt  founders.txt
force/.sqlx/: query-055889061e06257662e1fc0889391b32cc0fc2146c3c4bc52c84d52b0b475f45.json  query-095c62af44981afd7e7a512fd64c329d137a4f81132422f392368ea70a5d79f9.json  query-0b1f0b2e42c350697e9bed0ecc8548bad323fa54a6bf473e9bc502200165fce5.json  query-0d8215f2da2b8b561b3c6117171889131409e37644f9c8e17a85c6043a94bf1e.json  query-116f908775ab18f5748301ac901237e8b991787d73da249ef0c655082fe95679.json  query-12436897da4f6d35957853a01a0b29e6e19fe27b57d1f56c8b732811e6cbaf1e.json  query-14eddf82e51954294ec50d1062ecf14b61b73887cff6243eca8a2c9debd0192f.json  query-1c1caee1e18f98d1d739102a36226da3bdba8d68ae354880f3a64f305f38758b.json  query-1c3e36e30729352e726dcbdf36f09c7634514973a1e21ef17a4b3791312416d5.json  query-1d5c70198547315d92967eafd021b84f46a21d682b01c673bed6f9974050b2f8.json  query-22a9dd5f478ee507c7c2132eaa46348346581045f80e2f790d514c6f21cceebf.json  query-2e47d6081411380eb897454e4e1f8fb3e402b3578bb2cc436ead0b3719777975.json  query-2eba8f6e436695abcbcf23276747b2492dc72fcfbe4238d080b08f71fd658560.json  query-364c9c35ba822e491426808bf474bc813037c6f77196ad347452fd522f03cd29.json  query-3fc79d167e47d9f69c79dbc1487ce4d65fbd6b54067971b6ed03ab08f5e6f446.json  query-42c675ed1cafeab65665ab21015059445a2c6f026092600365ca737420a27316.json  query-4443f3c6bfe2a71d3d348be7e438a62b801a5ae3f7a101c0be8855b54ed33935.json  (+70 more)
force/configuration/: base.yaml  local.yaml  (+1 more)
(+75 files in other folders)
