[package]
name = "force"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name= "force"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
askama = "0.12.1"
env_logger = "0.11.5"
log = "0.4"
reqwest = {version="0.12", features=["json", "cookies"]}
serde = {version="1", features=["derive"]}
serde-aux = "3"
serde_json = "1.0"
tokio = {version="1", features=["macros", "rt-multi-thread"]}
config = "0.14"
uuid = {version="1", features=["v4"]}
async-openai = "0.26"
thirtyfour = "0.34.0"
rand = "0.8"
url = "2.5"
itertools = "0.13"
fake_user_agent = "0.2"
check-if-email-exists = "0.9"
scraper = "0.22"
anyhow = "1.0"
strsim = "0.11"
lettre = "0.11"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"tls-rustls"
]
